--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.9.0"
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-redux": "7.1.0",
+    "redux": "4.0.4",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
